--- a/package.json
+++ b/package.json
@@ -2,13 +2,50 @@
   "name": "@nx-vite-env-proxy/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {
-  },
+  "scripts": {},
   "private": true,
-  "dependencies": {
-  },
   "devDependencies": {
+    "@nx/eslint-plugin": "^16.5.0",
+    "@nx/js": "16.5.0",
+    "@nx/linter": "16.5.0",
+    "@nx/react": "^16.5.0",
+    "@nx/vite": "^16.5.0",
+    "@nx/workspace": "16.5.0",
+    "@swc/cli": "~0.1.62",
+    "@swc/core": "~1.3.51",
+    "@testing-library/react": "14.0.0",
+    "@types/node": "18.14.2",
+    "@types/react": "18.2.13",
+    "@types/react-dom": "18.2.6",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "@vitejs/plugin-react": "^4.0.0",
+    "@vitejs/plugin-react-swc": "^3.3.2",
+    "@vitest/coverage-c8": "^0.32.0",
+    "@vitest/ui": "^0.32.0",
+    "autoprefixer": "10.4.13",
+    "eslint": "~8.15.0",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "jsdom": "~22.1.0",
     "nx": "16.5.0",
-    "@nx/workspace": "16.5.0"
+    "postcss": "8.4.21",
+    "prettier": "^2.6.2",
+    "prettier-plugin-tailwindcss": "^0.3.0",
+    "tailwindcss": "3.2.7",
+    "typescript": "~5.1.3",
+    "vite": "^4.3.9",
+    "vite-tsconfig-paths": "^4.2.0",
+    "vitest": "^0.32.0"
+  },
+  "dependencies": {
+    "@swc/helpers": "~0.5.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tslib": "^2.3.0",
+    "zod": "^3.21.4"
   }
 }
